Add CLAUDE.md for project guidance and enhance LibraryImporter targeting rules